Fix search overlap on nav breakpoint

--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body { font-family: "Arial", sans-serif !important; max-width: 100%; overflow-x:
 .tabtitle { font-family: "Arial", sans-serif; font-size: 28px; }
 
 .navbar, .navbar-default, .navbar-light { position: fixed; width: 100%; background: #fff; background-color: #fff; z-index: 2; }
+.searchnavbtn { border-radius:0px 5px 5px 0px; margin-left: -8px; background-color: #fff !important; }
+.search-bar { max-width: 80%; border-radius: 5px 0px 0px 5px; }
 .searchnavbtn:hover { background-color: #fff !important; color: #fff !important; }
 
 .fas, .nav-link { display: inline-block; }
